Fixes rendering, adds missing dependencies

--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "gulp-util": "^3.0.8",
+    "nunjucks": "^3.0.1",
+    "through2": "^2.0.3"
+  }
 }
